package lexer.internal.model.category

import model.diagnostic.category.Category

internal object Syntax : Category {
    override val name: String = "Syntax"
}
